--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>HOSSAM ALSHAHRANI</h1>
-    <img src="programmer.jpg" alt="the image of the programmer " height="100" width="100">
+    <img src="profile.jpg" alt="the image of the programmer " height="100" width="100">
   
     <br><br>
     <p> <i style="font-size:24px" class="fa">&#xf09b;</i>
@@ -68,7 +68,7 @@
     </tr>
 </table>
 <h3>Social Snakes</h3> 
-<i style="font-size:24px" class="fa">&#xf121;</i>
+<img src="soc.jpg" alt="the image of the programmer " height="100" width="100">
 
 
     <p> Social media App made in python -<a href="#">code</a> | <a href="#">deployed</a></p>
